# v4lstack

./: stack.xml
v4l_cam/: .gitignore  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
v4l_cam/cfg/: CameraParameters.cfg  CameraParameters.cfg.txt  CameraParameters.txt
v4l_cam/include/luvcview/: v4l2uvc.h
v4l_cam/include/v4l_cam/: v4l_cam.h  v4l_cam_defaults.h  v4l_cam_node.h
v4l_cam/src/: main_luvcview.c  main_opencv_view.cpp  update_dynamic_reconfigure.cpp
v4l_cam/src/luvcview/: avilib.c  gui.c  utils.c  v4l2uvc.c
v4l_cam/src/v4l_cam/: .gitignore  generate_dynamic_reconfigure.cpp  v4l_cam.cpp  v4l_cam_node.cpp
